# fico

./: .gitignore  README.md  pyproject.toml
src/fico/: api.py  app.py  config.py  constants.py  theme.py  utils.py
src/fico/screens/: accounts.py  actions.py  details.py  dialogs.py  invitation.py  login.py  main.py  notification.py  redeem.py  rql.py
src/fico/views/: accounts.py  charges.py  entitlements.py  organizations.py  systems.py  users.py
src/fico/widgets/: datagrid.py  filterbar.py  form.py  navbar.py  pagination.py  topbar.py  view.py
tests/: conftest.py  test_accounts.py  test_login.py  types.py
